<resources>
    <!-- Facebook   -->
    <string name="facebook_app_id">163148279213195</string>
    <string name="fb_login_protocol_scheme">fb163148279213195</string>

    <string name="app_name">Jobs</string>
    <string name="home_main_text">Encontre um Serviço</string>
    <string name="cadatro_nome">Nome</string>
    <string name="cadastro_email">Email</string>
    <string name="cadastro_senha">Senha</string>
    <string name="btn_cadastro_cadastrar">Cadastrar-se</string>
    <string name="txt_home_area">Área</string>
    <string name="txt_home_ofertas">Ofertas de Serviço</string>
    <string name="txt_home_titulo">Título</string>
    <string name="txt_itemServico_descricao">Descrição</string>
    <string name="txt_itemServico_salario">Salário :</string>
    <string name="txt_itemServico_valorSalario">R$ 00,00</string>
    <string name="txt_itemServico_vagas">Vagas :</string>
    <string name="txt_itemServico_valorVagas">0</string>
    <string name="txtv_detalhes_da_oferta">Detalhes da Oferta</string>
    <string name="title_activity_minhas_ofertas">Minhas Ofertas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_cadastrar_oferta_de_serviço">Cadastrar Oferta de Serviço</string>
    <string name="txt_quantidade_vagas">Quantidade de vagas</string>
    <string name="btn_cadastrar_oferta">Cadastrar Serviço</string>

    <!--Perfil -->
    <string name="txt_nome_do_perfil">Nome do Usuario</string>
    <string name="txt_profissao">Profissão</string>
    <string name="txt_avaliacao_usuario">Avaliação do usuário</string>
    <string name="txt_contratar_usuario">Contratar Usuário</string>
    <string name="entrar_em_contato">Entrar em contato</string>
    <string name="titulo_detalhes">Titulo</string>
    <string name="descricao_detalhes">Descrição:</string>
    <string name="salario_detalhes">Salário:</string>
    <string name="quantidade_de_vagas_detalhes">Quantidade de Vagas:</string>
    <string name="telefone_detalhes">Telefone:</string>
    <string name="menu_txt_minhas_ofertas">Minhas Ofertas</string>
    <string name="menu_txt_perfil">Perfil</string>
    <string name="adicionar_dados_btn_perfil">Adicionar Dados</string>
    <string name="txt_sair">Sair</string>
    <string-array name="tempo_oferta">
        <item>Diario</item>
        <item>Semanal</item>
        <item>Mensal</item>
    </string-array>

    <string-array name="areas">
        <item>TI</item>
        <item>Reforma</item>
        <item>Design</item>
        <item>Todas</item>
        <item>Educação</item>
        <item>Programação</item>
        <item>Motorista</item>
        <item>Serviço Doméstico</item>
    </string-array>
</resources>