<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PerfilActivicty"
    >




    <androidx.cardview.widget.CardView
        android:id="@+id/cardImagemPerfil"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imagemPerfil"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/perfil_profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtNomeDoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_nome_do_perfil"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImagemPerfil" />

    <TextView
        android:id="@+id/txtProfissaoDoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:padding="10dp"
        android:text="@string/txt_profissao"
        android:textStyle="bold"
        android:textColor="@color/Grey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeDoUsuario" />


    <Button
        android:id="@+id/btn_contratar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="#5CC6BA"
        android:text="@string/txt_contratar_usuario"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>